# sast-scanner-pro

./: .gitignore  LICENSE  Makefile  README.md  compare_reports.py  config.yaml  pyproject.toml  requirements.txt  sast_scanner.py  setup.py
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
rules/: securevault.yaml
sast_scanner/: __init__.py  __main__.py  cli.py  scanner.py
sast_scanner/engines/: __init__.py  ai_engine.py  base_engine.py  custom_rules_engine.py  git_engine.py  iac_engine.py  regex_engine.py  sca_engine.py  secret_engine.py  semantic_engine.py  taint_engine.py
sast_scanner/models/: __init__.py  finding.py  rule.py
sast_scanner/reporters/: __init__.py  base_reporter.py  csv_reporter.py  html_reporter.py  json_reporter.py  sarif_reporter.py  trend_reporter.py
sast_scanner/utils/: __init__.py  file_utils.py  incremental.py  logger.py  suppression.py
tests/: test_scanner.py
tests/samples/: vulnerable.py
vulnerable_app (Test_sample)/: .env  Dockerfile  README.md  app.py  config.py  docker-compose.yml  models.py  requirements.txt
vulnerable_app (Test_sample)/k8s/: deployment.yaml
vulnerable_app (Test_sample)/routes/: admin.py  api.py  auth.py  files.py
vulnerable_app (Test_sample)/static/css/: style.css
vulnerable_app (Test_sample)/terraform/: main.tf
